# swinline-automation

./: .env.example  .gitignore  README.md  pyproject.toml
src/swinline_automation/: main.py
src/swinline_automation/hardware/: hardware_controller.py
src/swinline_automation/hardware/constants/: hardware_pins.py
src/swinline_automation/interfaces/: __init__.py  feeder_state_interface.py
src/swinline_automation/models/: __init__.py  animal_feeding_session.py
src/swinline_automation/mqtt/: client.py
src/swinline_automation/mqtt/constants/: mqtt_topics.py
src/swinline_automation/mqtt/dto/: alert_create_dto.py  alert_parameter_dto.py  daily_feeding_dto.py  feeder_settings_dto.py  feeding_consumption_log_dto.py  rfid_dto.py
src/swinline_automation/states/: __init__.py  exit_state.py  feeder_context.py  feeding_state.py  waiting_state.py
